@@ -1,3 +1,5 @@
+2153.	[bug]		nsupdate could leak memory. [RT #16691]
+
 2152.	[cleanup]	Use sizeof(buf) instead of fixed number in
 			dighost.c:get_trusted_key(). [RT #16678]
 
